Containerization cleanup.